8283520: JFR: Memory leak in dcmd_arena

Backport-of: 6a8be358d2af34fab8798077202b998badaa5d54